# VS-CLONE

./: .gitattributes  .gitignore  LAUNCHMVP.bat  LICENSE  PLAY.bat  README.md  RUN_INTERACTIVE.bat  RUN_PROTOTYPE.bat  RUN_TESTS.bat  next steps as of 11-4-25.md  pyproject.toml  remaining steps 10-30-25.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
assets/audio/: manifest.json
assets/graphics_assets/: README.md  manifest.json
assets/loc/: de.json  en.json  es.json  fr.json
assets/shaders/: gbuffer.frag  gbuffer.vert  lighting.frag  post_process.frag
docs/: BUILD_NOTES_TEMPLATE.md  COOP_SCOPING.md  ENGINE_RUNTIME.md  GIT_SETUP.md  GRAPHICS_ASSET_BRIEF.md  GRAPHICS_ENGINE.md  LOCALIZATION.md  MARKETING_CAPTURE_PLAN.md  META_ECONOMY.md  MVP_CHECKLIST.md  MVP_READINESS.md  PRD.md  PROTOTYPE.md  QA_HANDOFF.md  ROADMAP.md  UNITY_BRIDGE.md
docs/perf/: README.md
docs/pipeline/: art.md
game/: __init__.py  accessibility.py  analytics.py  arcade_viewer.py  audio.py  challenges.py  cloud.py  combat.py  config.py  content.py  content_exports.py  distribution.py  entities.py  environment.py  export.py  game_state.py  graphics.py  graphics_assets.py  graphics_canvas.py  interactive.py  live_ops.py  localization.py  meta.py  metrics.py  monetization.py  mvp.py  mvp_graphics.py  mvp_viewer.py  profile.py  prototype.py  relics.py  session.py  storage.py  systems.py
game/config/: rendering.json
game/levels/: __init__.py  baseline.py
logs/: OWNER_SIGN_OFF_2025-11-05.md  QA_REGRESSION_MATRIX.md  repeatability_20251105T034155Z.json  repeatability_20251105T034155Z.md
native/: __init__.py
native/client/: __init__.py  audio.py  cli.py  content.py  dto.py  harness.py  manifest.py
native/engine/: __init__.py
native/runtime/: __init__.py  assets.py  bootstrap.py  importer.py  loop.py  project.py  stream.py
tests/: test_accessibility.py  test_analytics.py  test_arcade_viewer.py  test_audio.py  test_audio_assets_validation.py  test_challenges.py  test_cloud.py  test_combat.py  test_config.py  test_content.py  test_content_exports.py  test_distribution.py  test_environment.py  test_export.py  test_game_state.py  test_graphics.py  test_graphics_assets.py  test_graphics_assets_validation.py  test_interactive.py  test_live_ops.py  test_localization.py  test_meta.py  test_metrics.py  test_monetization.py  test_mvp.py  test_mvp_graphics.py  test_mvp_viewer.py  test_native_cli.py  test_native_client.py  test_profile.py  test_prototype.py  test_relics.py  test_runtime.py  test_runtime_content_data.py  test_session.py  test_storage.py  test_systems.py
tests/perf/: __init__.py  test_frame_time_benchmark.py
tests/render/: test_deferred_pipeline.py  test_shader_dependency.py
tools/: __init__.py  audio_manifest.py  export_runtime_content.py  export_runtime_frames.py  export_unity_frames.py  extract_strings.py  graphics_manifest.py  launch_game.py  repeatability_check.py  runtime_playback_benchmark.py
tools/importers/: __init__.py  cli.py  errors.py  fbx.py  gltf.py  models.py  pipeline.py  utils.py
(+44 files in other folders)
