[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightfall-survivors-prototype"
version = "0.1.0"
description = "Nightfall Survivors prototype stack: text sim, arcade, and MVP viewer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{ name = "Nightfall Team" }]
keywords = ["nightfall", "survivors", "prototype", "runtime", "tooling"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Topic :: Games/Entertainment",
]

[project.urls]
homepage = "https://example.com/nightfall-survivors"
documentation = "https://example.com/nightfall-survivors/docs"
repository = "https://example.com/nightfall-survivors/repo"

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
ns-prototype = "game.prototype:main"
ns-interactive = "game.interactive:main"
ns-mvp = "game.mvp:main"
ns-viewer = "game.mvp_viewer:main"
ns-arcade-viewer = "game.arcade_viewer:main"
ns-liveops = "game.live_ops:main"
ns-graphics-manifest = "tools.graphics_manifest:main"
ns-audio-manifest = "tools.audio_manifest:main"
ns-export-frames = "tools.export_runtime_frames:main"
ns-export-content = "tools.export_runtime_content:main"
ns-runtime-artifacts = "native.client.cli:main"
ns-runtime-harness = "native.runtime.bootstrap:main"

[tool.setuptools.packages.find]
include = [
  "game",
  "game.*",
  "native",
  "native.*",
  "tools",
  "tools.*",
]
exclude = [
  "assets",
  "assets.*",
  "logs",
  "logs.*",
  "tests",
  "tests.*",
]

[tool.pytest.ini_options]
markers = [
  "perf: performance regression benchmarks that report metrics for CI",
]

